<resources>
    <string name="app_name">MovieDb</string>

    <!-- Base -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Отмена</string>
    <string name="empty_list">Список пуст</string>

    <!-- Navigation title -->
    <string name="home_tab">Home</string>
    <string name="search_tab">Search</string>
    <string name="account_tab">Account</string>

    <!-- Home screen -->
    <string name="now_in_theaters_header">В кинотеатрах</string>
    <string name="title_category_popular">Что популярно</string>
    <string name="title_category_top_rated">Высокие оценки</string>
    <string name="title_category_movies">Фильмы</string>
    <string name="title_category_tv">Сериалы</string>
    <string name="genres_title">Жанры</string>
    <string name="populars_header">Популярное</string>
    <string name="genres_header">Жанры</string>
    <string name="trending_header">Популярное</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>

    <!-- Movie details -->
    <string name="cast_header">В главных ролях</string>
    <string name="cast_all">Все роли</string>
    <string name="title_mask">%s / %s</string>
    <string name="hours_and_minutes_mask">%dч %dмин</string>
    <string name="title_and_year_mask">%s (%s)</string>
    <string name="title_and_year_mask_second_variant">%s, %s</string>
    <string name="title_mask_usual">%s</string>
    <string name="cast_mask">%s \n%s</string>
    <string name="directors">Режиссеры</string>
    <string name="writers">Сценаристы</string>
    <string name="header_directors">Режиссёры</string>
    <string name="header_writers">Сценаристы</string>
    <string name="all_cast_and_crew">Все актёры и съемочная группа</string>

    <!-- Search -->
    <string name="search_hint">Фильмы, сериалы, персоны</string>
    <string name="header_found_films">Найденные фильмы</string>
    <string name="header_found_tv_shows">Найденные сериалы</string>
    <string name="header_found_persons">Найденные персоны</string>
    <string name="header_found_company">Найденные компании</string>
    <string name="header_found_collection">Найденные коллекции</string>
    <string name="header_found_keywords">Найденные ключевые слова</string>
    <string name="all_search_mask">Все результаты: %d</string>
    <string name="search_title_mask">Поиск: %s</string>
    <string name="to_results">К результатам</string>
    <string name="noting_found">Ничего не нашлось</string>

    <!-- Person details -->
    <string name="birthday_without_deathDay_mask">Дата рождения:\n%s (%s)</string>
    <string name="birthday_with_deathDay_mask">Дата рождения:\n%s \nДата смерти:\n%s (%s)</string>

    <!-- External links -->
    <string name="facebook_url_with_id">https://www.facebook.com/%s</string>
    <string name="instagram_url_with_id">https://www.instagram.com/%s</string>
    <string name="twitter_url_with_id">https://twitter.com/%s</string>

    <!-- Account -->
    <string name="login">Войти</string>
    <string name="logout">Выйти</string>

    <!-- Settings -->
    <string name="settings_title">Настройки</string>
    <string name="adult_content">Взрослый контент</string>
    <string name="title_picture_quality">Качество изображений</string>
    <string-array name="image_qualities">
        <item>Низкое качество</item>
        <item>Среднее качество</item>
        <item>Высокое качество</item>
    </string-array>

    <!-- Rated screen-->
    <string name="rated">Оценные\nфильмы, сериалы, cерии</string>
    <string name="rated_title">Оценные</string>
    <string name="movies">Фильмы</string>
    <string name="tv_shows">Сериалы</string>
    <string name="tv_episodes">Серии</string>

    <plurals name="vote_count_plurals">
        <item quantity="zero">оценки отсутсвуют</item>
        <item quantity="one">1 оценка</item>
        <item quantity="two">2 оценки</item>
        <item quantity="few">%d оценки</item>
        <item quantity="many">%d оценки</item>
        <item quantity="other">%d оценки</item>
    </plurals>

    <!-- TvShow details-->
    <string name="button_estimate">Оценить</string>
    <string name="title_rating_the_movie_db">Рейтинг TheMovieDb</string>
    <string name="button_add_to_favorite">Добавить в избранное</string>
    
    

</resources>
