<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="castAndCrew"
            type="ru.vitalysizov.moviedb.model.domain.castAndCrew.CastAndCrewItem" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_small"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeaderCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_default"
                android:layout_weight="1"
                android:text="@string/cast_header"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowAllCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/padding_default"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/cast_all"
                android:textColor="@color/colorPrimary" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/rvCast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="@dimen/padding_default"
            android:paddingEnd="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:setCast="@{castAndCrew.cast}"
            tools:listitem="@layout/item_cast" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutDirectors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDirectorsCrew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_default"
                android:text="@string/header_directors"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDirectorsNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_default"
                app:setDirectors="@{castAndCrew.crew}"
                tools:text="Quentin Tarantino, and etc" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutWriters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWritersCrew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_default"
                android:text="@string/header_writers"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWritersNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_default"
                app:setWrites="@{castAndCrew.crew}"
                tools:text="Quentin Tarantino, and etc" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAllCastAndCrew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_default"
            android:layout_marginTop="@dimen/padding_default"
            android:layout_marginBottom="@dimen/padding_default"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/all_cast_and_crew"
            android:textColor="@color/colorPrimary" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
