<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.vitalysizov.moviedb.presentation.account_tab.viewmodel.AccountTabViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default"
        android:layout_marginEnd="@dimen/padding_default">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAvatar"
            loadAvatarImage="@{viewModel.accountDetails.avatarUrl}"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tvUserName"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/padding_default"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{viewModel.accountDetails.userName}"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toBottomOf="@+id/ivAvatar"
            app:layout_constraintEnd_toStartOf="@+id/btnLogout"
            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toTopOf="@+id/ivAvatar"
            tools:text="Name" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_settings_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvName" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_default"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_logout_24"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:visibility="gone"
            app:goneUnless="@{viewModel.showLogoutButton}"
            app:layout_constraintBottom_toBottomOf="@+id/tvName"
            app:layout_constraintEnd_toStartOf="@+id/btnSettings"
            app:layout_constraintTop_toTopOf="@+id/tvName"
            tools:visibility="visible" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnRated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="@dimen/text_size_22"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:contentPadding="@dimen/padding_default"
            app:goneUnless="@{viewModel.showLogoutButton}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAvatar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rated" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone"
            app:goneUnless="@{viewModel.showAuthButton}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <include
            layout="@layout/center_loading_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loading="@{viewModel.loading}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>